--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,36 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Transparent accounts</string>
+
+    <!-- Error & loading -->
+    <string name="error_prefix">Chyba: </string>
+    <string name="error_loading_prefix">Chyba načítání: </string>
+    <string name="error_load_failed">Nepodařilo se načíst data.</string>
+    <string name="error_network">Chyba připojení. Zkontrolujte síť.</string>
+    <string name="error_api">Nepodařilo se načíst data ze serveru.</string>
+    <string name="error_unknown">Něco se pokazilo. Zkuste to znovu.</string>
+    <string name="error_icon_content_description">Varování</string>
+    <string name="button_reload">Obnovit</string>
+
+    <!-- Account detail -->
+    <string name="detail_title">Detail účtu</string>
+    <string name="detail_name">Název</string>
+    <string name="detail_bank_account">Číslo účtu</string>
+    <string name="detail_currency">Měna</string>
+    <string name="detail_balance">Zůstatek</string>
+    <string name="detail_iban">IBAN</string>
+    <string name="detail_description">Popis</string>
+    <string name="detail_note">Poznámka</string>
+    <string name="back">Zpět</string>
+
+    <!-- Previews -->
+    <string name="preview_theme_text">Theme preview</string>
+    <string name="preview_error_message">Network error</string>
+    <string name="preview_account_name">Sample Account</string>
+    <string name="preview_account_bank">123456/0800</string>
+    <string name="preview_currency_czk">CZK</string>
+    <string name="preview_account_current">Current account</string>
+    <string name="preview_account_savings">Savings</string>
+    <string name="preview_account_bank_2">987654/0600</string>
+    <string name="preview_currency_eur">EUR</string>
 </resources>
